# Practice_library

./: .env  .env.sample  Dockerfile  docker-compose.yaml  library_fixture.json  pyproject.toml
config/: settings.py
users/: admin.py  forms.py  models.py  views.py
users/management/commands/: createadmin.py  createuser.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
