[project]
name = "practise-library"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (==5.2.8)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "ipython (>=9.7.0,<10.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "django-redis",
    "gunicorn"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
